--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -201,7 +201,7 @@ such as neural network and LSTM
 \subsection{Feed-Forward Neural Network}
 \label{sub:Feed-Forward Neural Network}
 
-\citet{Miller2009}
+\cite{Miller2009}
 treats event detection as a classification problem and uses a classical
 (feed-forward) neural network to perform the classification.
 Each sample is classified individually based on a input window centered around
@@ -273,9 +273,15 @@ We took an iterative approach to build our neural network. Initially we implemen
 
 The first iteration of network has 3 layers: input, LSTM (hidden), and output. Input is presented to the network in the form given (transformed coordinates of markers), while output (state of legs) is presented as ``one-hot'' vectors. The LSTM layer consists of several memory blocks, each containing only one cell (i.e. gates are not shared between cells). The output layer employs standard soft-max activation function, which is matched with negative-log-likelihood loss function. In this setup, the LSTM layer learns to model features in the underlying human-treadmill dynamic system, while the output layer uses these features to emit belief of leg state at each timestep.
 
-While this is a very simple architecture, it allows rapid training, and already achieves similar or even better performance on our testing datasets compared to baseline algorithms. However, its performance often stops improving very early and overfits easily, indicating insufficient regularization.
+While this is a very simple architecture, it allows rapid training, and already achieves similar or even better performance on our testing datasets compared to baseline algorithms. However, its performance often stops improving very early and is prone to overfitting, indicating insufficient regularization.
 
-\subsection{title}
+\subsection{Improvements}
+
+Our initial design employs a fairly wide LSTM layer for our data volume. In order to make full use of each cell and prevent overfitting from co-adaptation between LSTM cells, we inserted a \emph{dropout} \cite{Hinton2012} layer between input and LSTM layers. While dropout was initially proposed for use in feed-forward networks, it has been used extensively in RNN featuring LSTM cells to great success \cite{Pham2013}. Its major advantage over other approaches is that only one hyper-parameter (dropout probability $p$) needs to be tuned. Its biggest drawback is slower convergence.
+
+Another commonly used approach to improve robustness and convergence rate is to replace activation functions of some sigmoid neurons with ReLU (rectified linear unit). Because the sigmoids in LSTM serve special functions (``gating''), they cannot be readily replaced. Instead, we can incorporate ReLU by inserting an additional hidden layer between dropout layer and LSTM layer, which also serves the function of learning coordinate transformations. In addition, ReLU works well with dropout in practice \cite[Pham2013, Dahl2013].
+
+In an attempt to further improve performance, we replaced the single LSTM layer with two LSTM layers connected back-to-back. In order to avoid gradients vanishing in the input-side LSTM layer, we removed the output sigmoid from traditional LSTM cells as described in \cite{Gers2002}. However, the addition of a whole RNN layer drastically increased the difficulty of training. We are still finding a set of hyper-parameters (size of each layer, number of cells per block, etc.) that allows reasonable convergence speed.
 
 \section{Network Training}
 \label{sec:Network Training}
