--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -343,7 +343,7 @@ In an attempt to further improve performance, we replaced the single LSTM layer 
 
 \subsection{Parameter search}
 Initially we wanted to determine what values to use for the training of our network to achieve the best possible performance. In order to do this, we trained our network for a few epochs (10) with a  number of different parameters to see its performance.
-For each parameter set, we run the training three times, in order to average among the realizations and obtain results less suceptible to the initial conditions.
+For each parameter set, we ran the training three times, in order to average among the realizations and obtain results less susceptible to the initial conditions.
 All results from this section used the training half of Dataset 1, and training was implemented as stochastic gradient descent (SGD), with each datapoint corresponding to a sequence length of 500 samples (5 seconds).
 
 \begin{figure}
@@ -354,10 +354,10 @@ All results from this section used the training half of Dataset 1, and training 
  \label{fig:paramSearch}
 \end{figure}
 
-As can be seen from figure \ref{fig:paramSearch} a good learning rate was about $1e-1$ and an appropriate decay was about $1e-2$ (learning rate decay was automatically implemented by the \textit{adagrad} method of Torch's \textit{optim} toolbox as inversely proportional to number of iterations, here $1e-2$ means it takes 100 epochs for the learning rate to decay to half its initial value). Although an ideal network size cannot be inferred from here, we can see the decreasing returns on adding additional units to the network. We decided to use a network of 100 cells for further testing. However, the computational resources from the Amazon EC2 instance allows for training of networks of much larger sizes well above 1000 cells.
+As can be seen from Figure \ref{fig:paramSearch} a good learning rate was about $1e-1$ and an appropriate decay was about $1e-2$ (learning rate decay was automatically implemented by the \textit{adagrad} method of Torch's \textit{optim} toolbox as inversely proportional to number of iterations, here $1e-2$ means it takes 100 epochs for the learning rate to decay to half its initial value). Although an ideal network size cannot be inferred from here, we can see the decreasing returns on adding additional units to the network. We decided to use a network of 100 cells for further testing. However, the computational resources from the Amazon EC2 instance allows for training of networks of much larger sizes well above 1000 cells.
 
 \subsection{Dataset 1}
-Once we settled on parameters for our network, we trained it for 100 epochs and tested it on dataset 1. We compared results from Miller's feed-forward network, O'Connor's heuristic and our LSTM network. We assessed the results as follows: if a detected event was less than 100ms apart from the actual event (ground truth derived from force-plates), we measured the difference in times and quantified it in a histogram. If the detected event was more than 100ms apart from the closest true event, we consider it a false positive. In the same way, if no event was detected within 100ms of an actual event, we consider it to be a false negative. All four possible events (left heel-strike, toe-off, right heel-strike and toe-off) were considered independetly.  Results are summarized on figure \ref{fig:halfAndHalfTrials}. Each plot represents the histogram of time differences between actual and detected events when they are within a 100ms window of each other. At the top of each plot appear the total number of false positives (fp) and false negatives (fn) for each of the methods compared. O'Connor's results were very poor compared to other methods (larger bias and variance), so they were excluded from the figure. 
+Once we settled on parameters for our network, we trained it for 100 epochs and tested it on dataset 1. We compared results from Miller's feed-forward network, O'Connor's heuristic and our LSTM network. We assessed the results as follows: if a detected event was less than 100ms apart from the actual event (ground truth derived from force-plates), we measured the difference in times and quantified it in a histogram. If the detected event was more than 100ms apart from the closest true event, we consider it a false positive. In the same way, if no event was detected within 100ms of an actual event, we consider it to be a false negative. All four possible events (left heel-strike, toe-off, right heel-strike and toe-off) were considered independetly.  Results are summarized on Figure \ref{fig:halfAndHalfTrials}. Each plot represents the histogram of time differences between actual and detected events when they are within a 100ms window of each other. At the top of each plot appear the total number of false positives (fp) and false negatives (fn) for each of the methods compared. O'Connor's results were very poor compared to other methods (larger bias and variance), so they were excluded from the figure. 
 
 \begin{figure}
  \centering
@@ -410,39 +410,6 @@ Although our results are promising and seem to improve the current state-of-the-
 % Other future work includes feature engineering to determine the most relevant input variables, from all the available marker position data and its derivatives, in order to reduce the size of the network that has to be trained. We would also like to extend the capabilities of the method to data that was acquired in natural walking (as opposed to treadmill walking). We believe adequate feature engineering may be enough to achieve this objective too.\\
 
 \printbibliography
-
-% \begin{figure*}
-% \begin{center}
-% \includegraphics[width=0.70\textwidth]{figures/trueErrorsPerEventType_oconner.png}
-% \end{center}
-% \caption{
-% True errors per event type for O'Connor's heuristic.
-% The data set consists of 8 subjects à 3 trials each.
-% The panes are (clockwise starting from the top-left):
-% Left Heel Strike, Right Toe Off, Right Heel Strike, Left Toe Off.
-% One frame corresponds to 1 ms.
-% If the estimated event was not within 100 frames from the true event then it is reported as "other" and not shown in the histogram.
-% }
-% \label{fig:oconner}
-% \end{figure*}
-%
-% \begin{figure*}[t]
-% \begin{center}
-% \includegraphics[width=0.70\textwidth]{figures/trueErrorsPerEventType_miller.png}
-% \end{center}
-% \caption{
-% True errors per event type for Miller's neural network.
-% The data set consists of 8 subjects à 3 trials each.
-% The panes are (clockwise starting from the top-left):
-% Left Heel Strike, Right Toe Off, Right Heel Strike, Left Toe Off.
-% One frame corresponds to 0.5 ms.
-% If the estimated event was not within 100 frames from the true event then it is reported as "other" and not shown in the histogram.
-% }
-% \label{fig:miller}
-% \end{figure*}
-
-% \bibliographystyle{abbrv}
-% \bibliographystyle{plain}
 
 % \appendix
 
