(minor bib fix)

--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -232,3 +232,15 @@ pages = {8609--8613},
 title = {{Improving deep neural networks for LVCSR using rectified linear units and dropout}},
 year = {2013}
 }
+@book{Graves2012,
+address = {Berlin, Heidelberg},
+author = {Graves, Alex},
+doi = {10.1007/978-3-642-24797-2},
+isbn = {978-3-642-24796-5},
+publisher = {Springer Berlin Heidelberg},
+series = {Studies in Computational Intelligence},
+title = {{Supervised Sequence Labelling with Recurrent Neural Networks}},
+url = {http://link.springer.com/10.1007/978-3-642-24797-2},
+volume = {385},
+year = {2012}
+}
