--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -5,8 +5,8 @@
 
 \documentclass{acm_proc_article-sp}
 
-% \usepackage[utf8]{inputenc}
-% \usepackage[english]{babel} % English language/hyphenation
+\usepackage[utf8]{inputenc}
+\usepackage[english]{babel} % English language/hyphenation
 \usepackage{booktabs}
 \usepackage{multicol}
 \newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
@@ -155,11 +155,11 @@ concludes and shows possible paths for future work.
 \label{sub:Foot Velocity Algorithm}
 
 The Foot Velocity Algorithm (FVA) proposed by
-\citet{Oconnor2007}
+\cite{Oconnor2007}
 belongs to a category of algorithms that use heuristics such as the velocity
 and acceleration of heel and toe markers to detect motion events.
 There are other examples of such algorithms, notably the one developped by
-\citet{Hreljac2000}.
+\cite{Hreljac2000}.
 As these algorithms are quite similar, we will restrict the discussion
 to the FVA.
 
@@ -330,7 +330,7 @@ While this is a very simple architecture, it allows rapid training, and already 
 
 Our initial design employs a fairly wide LSTM layer for our data volume. In order to make full use of each cell and prevent overfitting from co-adaptation between LSTM cells, we inserted a \emph{dropout} \cite{Hinton2012} layer between input and LSTM layers. While dropout was initially proposed for use in feed-forward networks, it has been used extensively in RNN featuring LSTM cells to great success \cite{Pham2013}. Its major advantage over other approaches is that only one hyper-parameter (dropout probability $p$) needs to be tuned. Its biggest drawback is slower convergence.
 
-Another commonly used approach to improve robustness and convergence rate is to replace activation functions of some sigmoid neurons with ReLU (rectified linear unit). Because the sigmoids in LSTM serve special functions (``gating''), they cannot be readily replaced. Instead, we can incorporate ReLU by inserting an additional hidden layer between dropout layer and LSTM layer, which also serves the function of learning coordinate transformations. In addition, ReLU works well with dropout in practice \cite[Pham2013, Dahl2013].
+Another commonly used approach to improve robustness and convergence rate is to replace activation functions of some sigmoid neurons with ReLU (rectified linear unit). Because the sigmoids in LSTM serve special functions (``gating''), they cannot be readily replaced. Instead, we can incorporate ReLU by inserting an additional hidden layer between dropout layer and LSTM layer, which also serves the function of learning coordinate transformations. In addition, ReLU works well with dropout in practice \cite{Pham2013,Dahl2013}.
 
 In an attempt to further improve performance, we replaced the single LSTM layer with two LSTM layers connected back-to-back. In order to avoid gradients vanishing in the input-side LSTM layer, we removed the output sigmoid from traditional LSTM cells as described in \cite{Gers2002}. However, the addition of a whole RNN layer drastically increased the difficulty of training. We are still finding a set of hyper-parameters (size of each layer, number of cells per block, etc.) that allows reasonable convergence speed.
 
@@ -342,7 +342,7 @@ Initially we wanted to determine what values to use for the training of our netw
 For each parameter set, we run the training three times, in order to average among the realizations and obtain results less suceptible to the initial conditions.
 All results from this section used the training half of Dataset 1, and training was implemented as stochastic gradient descent (SGD), with each datapoint corresponding to a sequence length of 500 samples (5 seconds).
 
-\begin{figure}
+\begin{figure}[H]
  \centering
  \includegraphics[scale=.5]{./figures/parameterSearch.png}
  % parameterSearch.png: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=
@@ -355,7 +355,7 @@ As can be seen from figure \ref{fig:paramSearch} a good learning rate was about 
 \subsection{Dataset 1}
 Once we settled on parameters for our network, we trained it for 100 epochs and tested it on dataset 1. We compared results from Miller's feed-forward network, O'Connor's heuristic and our LSTM network. 
 
-\begin{figure}
+\begin{figure}[H]
  \centering
  \includegraphics[scale=.3]{./figures/Test1_1Train1_2Compare.png}
  % Test1_1Train1_2Compare.png: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=
