--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -155,7 +155,7 @@ concludes and shows possible paths for future work.
 \label{sub:Foot Velocity Algorithm}
 
 The Foot Velocity Algorithm (FVA) proposed by
-\cite{Oconnor2007}
+\cite{OConnor2007}
 belongs to a category of algorithms that use heuristics such as the velocity
 and acceleration of heel and toe markers to detect motion events.
 There are other examples of such algorithms, notably the one developped by
@@ -200,7 +200,7 @@ such as neural network and LSTM
 \subsection{Feed-Forward Neural Network}
 \label{sub:Feed-Forward Neural Network}
 
-\citet{Miller2009}
+\cite{Miller2009}
 treats event detection as a classification problem and uses a classical
 (feed-forward) neural network to perform the classification.
 Each sample is classified individually based on a input window centered around
