--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -6,7 +6,7 @@
     year = {2014}
 }
 @article{Gers2002,
-    author = {Gers, Felix a and Schraudolph, Nicol N and Schmidhuber, Jurgen},
+    author = {Gers, Felix and Schraudolph, Nicol and Schmidhuber, J\"{u}rgen},
     journal = {Journal of Machine Learning Research},
     pages = {115--143},
     title = {{Learning Precise Timing with LSTM Recurrent Networks}},
@@ -169,6 +169,19 @@ url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.121.837}
     title = {{Improving deep neural networks for LVCSR using rectified linear units and dropout}},
     year = {2013}
 }
+@article{GravesSchmidhuber2005,
+    author = {Graves, Alex and Schmidhuber, J\"{u}rgen},
+    journal = {Neural Networks},
+    pages = {602--610},
+    title = {{Framewise Phoneme Classification with Bidirectional LSTM and Other Neural Network Architectures}},
+    year = {2005}
+}
+@article{Liwicki2007,
+    author = {Liwicki, Marcus and Graves, Alex and Bunke, Horst and Schmidhuber, J\"{u}rgen},
+    journal = {Proceddings of the 9th International Conference on Document Analysis and Recognition, ICDAR 2007},
+    title = {{A Novel Approach to On-Line Handwriting Recognition Based on Bidirectional Long Short-Term Memory Networks}},
+    year = {2007}
+}
 @book{Graves2012,
 	title = {Supervised Sequence Labelling with Recurrent Neural Networks},
 	author = {Graves, Alex},
@@ -184,16 +197,4 @@ url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.121.837}
     author = {Hochreiter, Sepp},
     title = {{Untersuchungen zu Dynamischen Neuronalen Netzen}},
     year = {1999}
-}
-@book{Graves2012,
-address = {Berlin, Heidelberg},
-author = {Graves, Alex},
-doi = {10.1007/978-3-642-24797-2},
-isbn = {978-3-642-24796-5},
-publisher = {Springer Berlin Heidelberg},
-series = {Studies in Computational Intelligence},
-title = {{Supervised Sequence Labelling with Recurrent Neural Networks}},
-url = {http://link.springer.com/10.1007/978-3-642-24797-2},
-volume = {385},
-year = {2012}
 }
