--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -79,10 +79,21 @@
 \thispagestyle{empty}
 
 \begin{abstract}
-    \lipsum[1-2]
+    In this paper, we propose a new data-based approach to gait event detection 
+    based on a Long Short-Term Memory Recurrent Neural Network.
+    Our approach decisively outperforms existing methods such as the Foot 
+    Velocity Algorithm and feed-forward Neural Networks with sliding window 
+    in terms of the number of misclassified events and has a comparable 
+    performance in terms of bias and variance for correctly classified events.
+    Further advantages of our approach are that it does not rely on
+    questionable heuristics and that it does not require heavy preprocessing 
+    of the data.
+    Given the promising initial results, we believe that it should be possible 
+    to further improve the current state of the art for data-based event 
+    detection using a Long Short-Term Memory network.
 \end{abstract}
 
-\vskip 12em
+\vskip 42em
 
 \section{Introduction}
 \label{sec:Introduction}
