--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -410,7 +410,9 @@ The second dataset was designed to assess how well the methods generalize to new
 \section{Conclusion and Future Work}
 \label{sec:Conclusion and Future Work}
 \subsection{Conclusions}
-The results from our initial implementation of the LSTM network are very encouraging. Compared to the baseline methods we used for comparison, we achieved less confusion (false positive and false negative rate) and similar or better accuracy, measured through bias and quadratic error. According to \cite{Miller2009},  is true that Miller's method was implemented in a slightly modified way (fixed window size), so that his resu
+The results from our initial implementation of the LSTM network are very encouraging. Compared to the baseline methods we used for comparison, we achieved less confusion (false positive and false negative rate) and similar or better accuracy, measured through bias and quadratic error. In \cite{Miller2009} the reported results for the method are similar (although slightly worse) than what we found here. However, miller only uses 72 gait cycles (total) for his training, which is a lot smaller than our dataset. Miller also fails to discuss his false detection rates, so it is not clear whether the high false positive rate was an issue for him or whether it is an artifact of our implementation.
+
+Overall, the results we obtained are satisfying and we expect to polish them a little further before submitting them for publication in a gait research journal.
 
 \subsection{Future work}
 Although our results are promising and seem to improve the current state-of-the-art, there a few things that still can be done to assess and improve performance:
