--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -247,8 +247,7 @@ The network architecture itself is minimalistic: between an input layer
 consisting of 50 input units and an output layer consisting of 2 units (one
 for each leg) there is only one hidden layer with 33 sigmoid units.
 
-In our opinion, the feed-forward neural network approach has several
-disadvantages.
+The feed-forward neural network approach has several disadvantages.
 In addition to heavy preprocessing consisting of feature extraction and PCA, the
 data has to be split up into windows of variable length.
 This in turn requires that the foot displacement be measured accurately from
@@ -261,9 +260,8 @@ capture the long-range dependencies that exist between the data samples.
 
 Gait event detection can be seen as a form of sequence labeling (sometimes also
 called segment classification), i.e., the task of assigning a sequence of labels
-(swing phase vs. stance phase) to a sequence of input data (the motion capture
-signals).
-The success of a sequence labeling system depends crucially on its ability to
+(swing phase vs. stance phase) to a sequence of input (motion) data.
+The success of a sequence labeling system hinges on its ability to
 incorporate context information from both sides of the segment in question.
 %
 One way to incorporate this context information is to use feed-forward or
@@ -302,7 +300,8 @@ system.
 
 \section{Data}
 \label{sec:Data}
-Our training and testing was conducted on data from 10 healthy subjects walking at three different speeds for 50 seconds. Each sequence of 50 seconds will be called a trial from now on. This totals 1500 seconds of recorded data, which roughly correspond to 1000 gait cycles.  For each subject the motion-capture data (input) is 3D marker position of 18 different markers placed in the same anatomical positions for each subject, sampled at 100Hz. The event labels (target) were computed from ground force reaction data sampled at 1kHz.
+Our training and testing was conducted on data from 10 healthy subjects walking 
+on a treadmill at three different speeds for 50 seconds. Each sequence of 50 seconds will be called a trial from now on. This totals 1500 seconds of recorded data, which roughly correspond to 1000 gait cycles.  For each subject, 3D motion capture data was collected using 18 reflective markers placed in the same anatomical positions for each subject, sampled at 100Hz. The event labels (target) were computed from ground force reaction data sampled at 1kHz.
 
 The markers were placed at the toe, ankle, heel, knee, greater trochanter (hip), tibia, femur, and anterior and posterior superior illiac spine (pelvis) on each leg.
 % All data was collected in the Human Movement Research Laboratory of the University of Pittsburgh, with approval of its IRB. All subjects consented to allow their data be used for research purposes. We are using the data with permission from the laboratory's PI, Dr. Gelsy Torres-Oviedo.
@@ -395,7 +394,6 @@ Once we settled on parameters for our network, we trained it for 100 epochs and 
 \subsection{Dataset 2}
 The second dataset was designed to assess how well the methods generalize to new users. We performed the same treatment as for the previous dataset, and results are shown on \ref{fig:halfAndHalfUsers}. From these results we can see that the LSTM network achieves better accuracy than Miller, with less false positives and false negatives. However, the false positive rate is somewhat high for the LSTM network too. 
 
-
 \begin{figure}[H]
  \centering
  \includegraphics[scale=.5]{./figures/Test2_1Train2_2Compare.png}
@@ -408,7 +406,7 @@ The second dataset was designed to assess how well the methods generalize to new
 \section{Conclusion and Future Work}
 \label{sec:Conclusion and Future Work}
 \subsection{Conclusions}
-The results from our initial implementation of the LSTM network are very encouraging. Compared to the baseline methods we used for comparison, we achieved less confusion (false positive and false negative rate) and similar or better accuracy, measured through bias and quadratic error. In \cite{Miller2009} the reported results for the method are similar (although slightly worse) than what we found here. However, miller only uses 72 gait cycles (total) for his training, which is a lot smaller than our dataset. Miller also fails to discuss his false detection rates, so it is not clear whether the high false positive rate was an issue for him or whether it is an artifact of our implementation.
+The results from our initial implementation of the LSTM network are very encouraging. Compared to the baseline methods we used for comparison, we achieved less confusion (false positive and false negative rate) and similar or better accuracy, measured through bias and quadratic error. According to \cite{Miller2009},  is true that Miller's method was implemented in a slightly modified way (fixed window size), so that his resu
 
 Overall, the results we obtained are satisfying and we expect to polish them a little further before submitting them for publication in a gait research journal.
 
