--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -302,7 +302,7 @@ system.
 
 \section{Data}
 \label{sec:Data}
-Our training and testing was conducted on data from 10 healthy subjects walking at three different speeds for 50 seconds. Each sequence of 50 seconds will be called a trial from now on. This totals 1500 seconds of recorded data, which roughly correspond to 1000 gait cycles.  For each subject the motion-capture data (input) is 3D marker position of 18 different markers placed in the same anatomical positions for each subject, sampled at 100Hz. The event labels (target) were computed from ground force reaction data sampled at 1kHz.
+Our training and testing was conducted on data from 10 healthy subjects walking at three different speeds for 50 seconds. Each sequence of 50 seconds will be called a trial from now on. This totals 1500 seconds of recorded data, which roughly correspond to 1000 gait cycles.  For each subject the motion-capture data (input) is 3D marker position of 18 different markers placed in the same anatomical positions for each subject, sampled at 100Hz. The event labels (target) were computed from ground force reaction data sampled at 1kHz, which is considered the gold standard in the field. In order to compute events the ground reaction forces in gravity's axis are thresholded ($20 N$) and whenever they exceed this threshold, the foot is considered to be on the ground (stance). By searching for the transitions between stance and no-stance, the events are found.
 
 The markers were placed at the toe, ankle, heel, knee, greater trochanter (hip), tibia, femur, and anterior and posterior superior illiac spine (pelvis) on each leg.
 % All data was collected in the Human Movement Research Laboratory of the University of Pittsburgh, with approval of its IRB. All subjects consented to allow their data be used for research purposes. We are using the data with permission from the laboratory's PI, Dr. Gelsy Torres-Oviedo.
@@ -408,9 +408,11 @@ The second dataset was designed to assess how well the methods generalize to new
 \section{Conclusion and Future Work}
 \label{sec:Conclusion and Future Work}
 \subsection{Conclusions}
-The results from our initial implementation of the LSTM network are very encouraging. Compared to the baseline methods we used for comparison, we achieved less confusion (false positive and false negative rate) and similar or better accuracy, measured through bias and quadratic error. In \cite{Miller2009} the reported results for the method are similar (although slightly worse) than what we found here. However, miller only uses 72 gait cycles (total) for his training, which is a lot smaller than our dataset. Miller also fails to discuss his false detection rates, so it is not clear whether the high false positive rate was an issue for him or whether it is an artifact of our implementation.
+The results from our initial implementation of the LSTM network are very encouraging. Compared to the baseline methods, we achieved less confusion (false positive and false negative rate) and similar or better accuracy, measured through bias and quadratic error. O'Connor's heuristic performed very poorly, with biases and standard deviations tens of milliseconds larger than what Miller and the LSTM network achieved. This is not too surprising since O'Connor is a fixed heuristic method with no way to adapt to the data (requires no training).
 
-Overall, the results we obtained are satisfying and we expect to polish them a little further before submitting them for publication in a gait research journal.
+Miller performed much better than O'Connor but we still found that LSTM performed slightly better. In \cite{Miller2009} the reported results for the method are similar (although slightly worse) than what we found here for the same algorithm. However, \cite{Miller2009} only uses 72 gait cycles (total) for his training, which is a lot smaller than our dataset. Miller also fails to discuss his cross-validation method and false detection rates, so it is not clear whether the high false positive rate was an issue for him or whether it is an artifact of our implementation and the larger dataset we tried to train on. Miller did achieve his performance including subjects with pathological gait, but given the small dataset, it is hard to say how many of his samples were really pathological and how much that affected performance.
+
+It is worth noticing that our implementation can do event detection in real time, both in the sense that it is computationally tractable and that our prediction is causal, relying only in past marker data. This makes our method unique, as we couldn't find anything on the literature that offered similar guarantees. Overall, the results we obtained are satisfying and we expect to polish them a little further before submitting them for publication in a gait research journal.
 
 \subsection{Future work}
 Although our results are promising and seem to improve the current state-of-the-art, there a few things that still can be done to assess and improve performance:
